# Kvantum

Kvantum/: CMakeLists.txt
Kvantum/kvantummanager/: CMakeLists.txt
Kvantum/kvantumpreview/: CMakeLists.txt
Kvantum/style/: CMakeLists.txt  Kvantum.cpp  polishing.cpp  rendering.cpp  standardIcons.cpp  style.pro
Kvantum/style/drag/: windowmanager.cpp  windowmanager.h
Kvantum/style/themeconfig/: ThemeConfig.cpp
